@@ -1,8 +1,9 @@
 package gregtech.api.factory.routing;
 
+import java.util.ArrayDeque;
+
 import gregtech.api.factory.IRouteInfo;
 import it.unimi.dsi.fastutil.objects.Object2ObjectRBTreeMap;
-import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 
 @SuppressWarnings("unchecked")
 public class StepQueue<N, R extends IRouteInfo<R>> extends Object2ObjectRBTreeMap<R, StepLike> {
@@ -20,11 +21,8 @@ public class StepQueue<N, R extends IRouteInfo<R>> extends Object2ObjectRBTreeMa
             return step;
         } else if (front instanceof NetworkStepList) {
             NetworkStepList<N, R> list = (NetworkStepList<N, R>) front;
-            // Remove the front and shift all later elements down one.
-            // This is more correct than removing the last element and the chances of a NetworkStepList existing are
-            // very low.
             NetworkStep<N, R> step = list.steps()
-                .remove(0);
+                .removeFirst();
 
             if (list.steps()
                 .isEmpty()) {
@@ -43,16 +41,16 @@ public class StepQueue<N, R extends IRouteInfo<R>> extends Object2ObjectRBTreeMa
         if (existing instanceof NetworkStep) {
             NetworkStep<N, R> existingStep = (NetworkStep<N, R>) existing;
 
-            ObjectArrayList<NetworkStep<N, R>> steps = new ObjectArrayList<>();
+            ArrayDeque<NetworkStep<N, R>> steps = new ArrayDeque<>();
 
-            steps.add(existingStep);
-            steps.add(step);
+            steps.addLast(existingStep);
+            steps.addLast(step);
 
             this.put(step.route(), new NetworkStepList<>(steps));
         } else if (existing instanceof NetworkStepList) {
             NetworkStepList<N, R> list = (NetworkStepList<N, R>) existing;
             list.steps()
-                .add(step);
+                .addLast(step);
 
             this.put(step.route(), list);
         } else {
